# Bataille-Navale

./: .gitlab-ci.yml  README.md  log.md
Bataille_Navale/: dune-project
Bataille_Navale/_build/: .db  .digest-db  log
Bataille_Navale/_build/default/: Bataille_Navale.dune-package  Bataille_Navale.install
Bataille_Navale/_build/default/lib/: Bataille_Navale.cma  Bataille_Navale.cmxa  Bataille_Navale.cmxs
Bataille_Navale/_build/default/lib/.Bataille_Navale.objs/byte/: bataille_Navale.cmi  bataille_Navale.cmo  bataille_Navale.cmt
Bataille_Navale/_build/default/lib/.Bataille_Navale.objs/native/: bataille_Navale.cmx
Bataille_Navale/_build/default/lib/.merlin-conf/: lib-Bataille_Navale
Bataille_Navale/_build/default/test/.merlin-conf/: exe-test_Bataille_Navale
Bataille_Navale/_build/default/test/.test_Bataille_Navale.eobjs/byte/: dune__exe__Test_Bataille_Navale.cmi  dune__exe__Test_Bataille_Navale.cmti
Bataille_Navale/_build/default/test/.test_Bataille_Navale.eobjs/native/: dune__exe__Test_Bataille_Navale.cmx
Bataille_Navale/_build/install/default/lib/Bataille_Navale/: META  dune-package  opam
game/: dune-project  test.ml
lib/: Action.ml  Action.mli  Bateaux.ml  Bateaux.mli  Coords.ml  Coords.mli  GameState.ml  GameState.mli  GameView.ml  GameView.mli  IA.ml  IA.mli  Outils.ml  Outils.mli  Plateaux.ml  Plateaux.mli  Regle.ml  Regle.mli  dune
test/: dune  test_Bataille_Navale.ml
