(lang dune 3.16)

(name monpetitjeu)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Julien Narboux")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name monpetitjeu)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune qcheck)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
